// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelephoneFormItem renders correctly when there are multiple items in a Form 1`] = `
<form
  className="ant-form ant-form-horizontal"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item ant-form-item-with-help telephone-form-item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="tel1"
        title="tel1"
      >
        tel1
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row"
            style={Object {}}
          >
            <div
              className="ant-col ant-col-8"
              style={Object {}}
            >
              <div
                className="ant-row ant-form-item no-self-error"
                style={Object {}}
              >
                <div
                  className="ant-col ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input"
                        id="tel1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="请输入区号"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col ant-col-1"
              style={Object {}}
            >
              <div
                className="ant-row ant-row-center ant-row-middle"
                style={
                  Object {
                    "height": 36,
                  }
                }
              >
                -
              </div>
            </div>
            <div
              className="ant-col ant-col-15"
              style={Object {}}
            >
              <div
                className="ant-row ant-form-item no-self-error"
                style={Object {}}
              >
                <div
                  className="ant-col ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input"
                        id="tel1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="请输入固定电话"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-form-item-explain ant-form-item-explain-connected"
      >
        <div
          className="ant-show-help-item-appear ant-show-help-item-appear-start ant-show-help-item"
          role="alert"
          style={
            Object {
              "height": 0,
              "opacity": 0,
            }
          }
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item ant-form-item-with-help telephone-form-item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="tel2"
        title="tel2"
      >
        tel2
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row"
            style={Object {}}
          >
            <div
              className="ant-col ant-col-8"
              style={Object {}}
            >
              <div
                className="ant-row ant-form-item no-self-error"
                style={Object {}}
              >
                <div
                  className="ant-col ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input"
                        id="tel2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="请输入区号"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col ant-col-1"
              style={Object {}}
            >
              <div
                className="ant-row ant-row-center ant-row-middle"
                style={
                  Object {
                    "height": 36,
                  }
                }
              >
                -
              </div>
            </div>
            <div
              className="ant-col ant-col-15"
              style={Object {}}
            >
              <div
                className="ant-row ant-form-item no-self-error"
                style={Object {}}
              >
                <div
                  className="ant-col ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <input
                        className="ant-input"
                        id="tel2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="请输入固定电话"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-form-item-explain ant-form-item-explain-connected"
      >
        <div
          className="ant-show-help-item-appear ant-show-help-item-appear-start ant-show-help-item"
          role="alert"
          style={
            Object {
              "height": 0,
              "opacity": 0,
            }
          }
        >
          
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`TelephoneFormItem renders correctly when there is a single TelephoneFormItem 1`] = `
<div
  className="ant-row ant-form-item ant-form-item-with-help telephone-form-item"
  style={Object {}}
>
  <div
    className="ant-col ant-form-item-label"
    style={Object {}}
  >
    <label
      className=""
      htmlFor="officePhone"
      title="固定电话"
    >
      固定电话
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="ant-row"
          style={Object {}}
        >
          <div
            className="ant-col ant-col-8"
            style={Object {}}
          >
            <div
              className="ant-row ant-form-item no-self-error"
              style={Object {}}
            >
              <div
                className="ant-col ant-form-item-control"
                style={Object {}}
              >
                <div
                  className="ant-form-item-control-input"
                >
                  <div
                    className="ant-form-item-control-input-content"
                  >
                    <input
                      className="ant-input"
                      id="officePhone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="请输入区号"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-col ant-col-1"
            style={Object {}}
          >
            <div
              className="ant-row ant-row-center ant-row-middle"
              style={
                Object {
                  "height": 36,
                }
              }
            >
              -
            </div>
          </div>
          <div
            className="ant-col ant-col-15"
            style={Object {}}
          >
            <div
              className="ant-row ant-form-item no-self-error"
              style={Object {}}
            >
              <div
                className="ant-col ant-form-item-control"
                style={Object {}}
              >
                <div
                  className="ant-form-item-control-input"
                >
                  <div
                    className="ant-form-item-control-input-content"
                  >
                    <input
                      className="ant-input"
                      id="officePhone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="请输入固定电话"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-form-item-explain ant-form-item-explain-connected"
    >
      <div
        className="ant-show-help-item-appear ant-show-help-item-appear-start ant-show-help-item"
        role="alert"
        style={
          Object {
            "height": 0,
            "opacity": 0,
          }
        }
      >
        
      </div>
    </div>
  </div>
</div>
`;
